@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-06T01:07:04Z",
+  "timestamp" : "2022-05-07T01:09:31Z",
   "count_outdated" : 259,
   "uniques_outdated" : 137,
-  "count" : 265,
-  "uniques" : 143,
+  "count" : 266,
+  "uniques" : 144,
   "clones" : [
     {
       "timestamp": "2022-04-24T00:00:00Z",
@@ -46,6 +46,13 @@
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
     }
   ]
 }
