@@ -1,3 +1,9 @@
+2022-05-07T01:09:31Z:
+* notice: last 14d: all unq: 7 3
+* notice: prev accum: outdated-all outdated-unq / all unq: 259 137 / 265 143
+* notice: next accum: outdated-all outdated-unq / all unq: 259 137 / 266 144
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +1 +1 / -0 -0
+
 2022-04-29T01:16:30Z:
 * notice: last 14d: all unq: 14 7
 * notice: prev accum: outdated-all outdated-unq / all unq: 248 128 / 261 139
